--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,14 @@ dependencies:
   firebase_auth: '^3.3.16'
   font_awesome_flutter: "^10.1.0"
   page_transition: "^2.0.5"
+  flutter_facebook_auth: '^3.5.0'
+  flutter_blue_plus: '^1.1.3'
+  wifi_scan: '^0.2.1'
+  network_info_plus: '^2.1.3'
+  loading_animation_widget: '^1.1.0+5'
+  im_stepper: '^0.1.3'
+
+
 
 dev_dependencies:
   flutter_test:
