--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   network_info_plus: '^2.1.3'
   loading_animation_widget: '^1.1.0+5'
   im_stepper: '^0.1.3'
+  sizer: '^2.0.15'
 
 
 
