--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   im_stepper: '^0.1.3'
   sizer: '^2.0.15'
   battery_indicator: '^0.1.1'
+  linear_progress_bar: "^1.1.0"
 
 dev_dependencies:
   flutter_launcher_icons_maker: '^0.10.1'
