--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_analytics: '^9.1.9'
   firebase_crashlytics: '^2.8.1'
   cloud_firestore: '^3.1.17'
+  page_view_indicators: '^2.0.0'
 
 
 dev_dependencies:
