--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,37 +5,41 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">=2.16.2 <=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  google_sign_in: '^4.5.1'
-  auth_buttons: '^2.0.4'
-  cupertino_icons: '^1.0.2'
-  firebase_core: '^1.15.0'
-  firebase_auth: '^3.3.16'
-  font_awesome_flutter: "^10.1.0"
-  page_transition: "^2.0.5"
-  flutter_facebook_auth: '^3.5.0'
-  flutter_blue_plus: '^1.1.3'
-  wifi_scan: '^0.2.1'
-  network_info_plus: '^2.1.3'
-  loading_animation_widget: '^1.1.0+5'
-  im_stepper: '^0.1.3'
-  sizer: '^2.0.15'
-  battery_indicator: '^0.1.1'
-  linear_progress_bar: "^1.1.0"
-  firebase_analytics: '^9.1.9'
-  firebase_crashlytics: '^2.8.1'
-  cloud_firestore: '^3.1.17'
-  page_view_indicators: '^2.0.0'
+  intl: ^0.17.0
+  google_sign_in: ^4.5.1
+  auth_buttons: ^2.0.4
+  cupertino_icons: ^1.0.2
+  firebase_core: ^1.15.0
+  firebase_auth: ^3.3.16
+  font_awesome_flutter: ^10.1.0
+  page_transition: ^2.0.5
+  flutter_facebook_auth: ^3.5.0
+  flutter_blue_plus: ^1.1.3
+  wifi_scan: ^0.2.1
+  network_info_plus: ^2.1.3
+  loading_animation_widget: ^1.1.0+5
+  im_stepper: ^0.1.3
+  sizer: ^2.0.15
+  battery_indicator: ^0.1.1
+  linear_progress_bar: ^1.1.0
+  firebase_analytics: ^9.1.9
+  firebase_crashlytics: ^2.8.1
+  cloud_firestore: ^3.1.17
+  page_view_indicators: ^2.0.0
 
 
 dev_dependencies:
-  flutter_launcher_icons_maker: '^0.10.1'
+  flutter_launcher_icons_maker: ^0.10.2
   flutter_test:
     sdk: flutter
+
+  lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 flutter_icons:
   android: true
