--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_crashlytics: ^2.8.1
   cloud_firestore: ^3.1.17
   page_view_indicators: ^2.0.0
+  cached_network_image: ^3.2.1
 
 
 dev_dependencies:
