--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cloud_firestore: ^3.1.17
   page_view_indicators: ^2.0.0
   cached_network_image: ^3.2.1
+  firebase_messaging: ^11.4.2
 
 
 dev_dependencies:
