--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,30 +13,27 @@ dependencies:
   intl: ^0.17.0
   google_sign_in: ^5.3.3
   auth_buttons: ^2.0.4
-  cupertino_icons: ^1.0.2
   firebase_core: ^1.15.0
   firebase_auth: ^3.3.16
-  font_awesome_flutter: ^10.1.0
   page_transition: ^2.0.5
   flutter_facebook_auth: ^3.5.0
   flutter_blue_plus: ^1.1.3
   wifi_scan: ^0.2.1
-  network_info_plus: ^2.1.3
   loading_animation_widget: ^1.1.0+5
   im_stepper: ^0.1.3
   sizer: ^2.0.15
   battery_indicator: ^0.1.1
-  linear_progress_bar: ^1.1.0
   firebase_analytics: ^9.1.9
   firebase_crashlytics: ^2.8.1
   cloud_firestore: ^3.1.17
   page_view_indicators: ^2.0.0
   cached_network_image: ^3.2.1
   firebase_messaging: ^11.4.2
+  shared_preferences: ^2.0.15
 
 
 dev_dependencies:
-  flutter_launcher_icons_maker: ^0.10.2
+  flutter_launcher_icons: ^0.9.2
   flutter_test:
     sdk: flutter
 
