--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,6 @@ dependencies:
   loading_animation_widget: ^1.1.0+5
   im_stepper: ^0.1.3
   sizer: ^2.0.15
-  battery_indicator: ^0.1.1
   firebase_analytics: ^9.1.9
   firebase_crashlytics: ^2.8.1
   cloud_firestore: ^3.1.17
@@ -30,6 +29,7 @@ dependencies:
   cached_network_image: ^3.2.1
   firebase_messaging: ^11.4.2
   shared_preferences: ^2.0.15
+  device_info_plus: ^4.0.0
 
 
 dev_dependencies:
