--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_messaging: ^11.4.2
   shared_preferences: ^2.0.15
   device_info_plus: ^4.0.0
+  mqtt_client: ^9.6.9
 
 
 dev_dependencies:
