--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,25 +12,25 @@ dependencies:
     sdk: flutter
   intl: ^0.17.0
   google_sign_in: ^5.3.3
-  auth_buttons: ^2.0.4
-  firebase_core: ^1.15.0
-  firebase_auth: ^3.3.16
-  page_transition: ^2.0.5
+  auth_buttons: ^3.0.0
+  firebase_core: ^1.18.0
+  firebase_auth: ^3.3.20
+  page_transition: ^2.0.9
   flutter_facebook_auth: ^3.5.0
   flutter_blue_plus: ^1.1.3
-  wifi_scan: ^0.2.1
-  loading_animation_widget: ^1.1.0+5
-  im_stepper: ^0.1.3
+  wifi_scan: ^0.3.0
+  loading_animation_widget: ^1.2.0+2
+  im_stepper: ^1.0.1+1
   sizer: ^2.0.15
-  firebase_analytics: ^9.1.9
-  firebase_crashlytics: ^2.8.1
-  cloud_firestore: ^3.1.17
+  firebase_analytics: ^9.1.10
+  firebase_crashlytics: ^2.8.2
+  cloud_firestore: ^3.1.18
   page_view_indicators: ^2.0.0
   cached_network_image: ^3.2.1
   firebase_messaging: ^11.4.2
   shared_preferences: ^2.0.15
   device_info_plus: ^4.0.0
-  mqtt_client: ^9.6.9
+  mqtt_client: ^9.6.8
 
 
 dev_dependencies:
