--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   shared_preferences: ^2.0.15
   device_info_plus: ^4.0.0
   mqtt_client: ^9.6.8
+  carousel_slider: ^4.1.1
 
 
 dev_dependencies:
