--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,6 +55,8 @@
 	<false/>
 	<key>FacebookAppID</key>
 	<string>448820460344528</string>
+    <key>FacebookClientToken</key>
+    <string>96195d8689cd38614771c28a726d0199</string>
 	<key>FacebookAutoLogAppEventsEnabled</key>
 	<false/>
 	<key>FacebookDisplayName</key>
